# tap-mcp-bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml  labeler.yml  nextest.toml
.github/workflows/: ci.yml  dependabot-automerge.yml  labeler.yml  miri.yml  release.yml
docker/: Dockerfile
docs/: CONFIG_SUMMARY.md  DEVELOPMENT.md  MCP_INTEGRATION.md  OBSERVABILITY.md  QUICKSTART.md  TAP_SPECIFICATION.md  TOOLS_SETUP.md
docs/adr/: 001-remove-scripts-directory.md
examples/: apc_generation.rs  basic_checkout.rs  browse_catalog.rs  error_handling.rs  signature_generation.rs
src/: error.rs  lib.rs
src/mcp/: mod.rs  tools.rs
src/tap/: acro.rs  apc.rs  jwk.rs  jwt.rs  mod.rs  signer.rs
tap-mcp-bridge/: Cargo.toml  deny.toml
tap-mcp-bridge/benches/: observability_overhead.rs
tap-mcp-bridge/examples/: acro_generation.rs  apc_generation.rs  basic_checkout.rs  error_handling.rs  full_checkout_flow.rs  id_token_generation.rs  jwks_generation.rs  signature_generation.rs
tap-mcp-bridge/examples/merchants/: acme-store.toml  shopify-style.toml  standard-tap.toml
tap-mcp-bridge/src/: error.rs  lib.rs
tap-mcp-bridge/src/mcp/: cart.rs  http.rs  mod.rs  models.rs  orders.rs  payment.rs  products.rs  tools.rs
tap-mcp-bridge/src/mcp/subscriptions/: lifecycle.rs  mod.rs  models.rs  pricing.rs  proration.rs  tools.rs
tap-mcp-bridge/src/merchant/: config.rs  default.rs  endpoint.rs  field_map.rs  mod.rs  subscription_config.rs  subscription_traits.rs  traits.rs  transform.rs
tap-mcp-bridge/src/reliability/: circuit_breaker.rs  mod.rs  retry.rs
tap-mcp-bridge/src/security/: audit.rs  mod.rs  rate_limit.rs
tap-mcp-bridge/src/tap/: acro.rs  apc.rs  jwe.rs  jwk.rs  mod.rs  signer.rs  verifier.rs
tap-mcp-bridge/src/tap/tests/: mod.rs  proptest_signatures.rs
tap-mcp-bridge/src/transport/: config.rs  mod.rs  sealed.rs
tap-mcp-bridge/src/transport/http/: mod.rs
tap-mcp-bridge/tests/: integration_test.rs  merchant_integration_test.rs
tap-mcp-server/: Cargo.toml
tap-mcp-server/src/: main.rs  observability.rs
tests/: integration_test.rs
