[workspace]
resolver = "2"
members = ["tap-mcp-bridge", "tap-mcp-server"]

[workspace.package]
edition = "2024"
authors = ["Andrei G. <andrei.g@my.com>"]
license = "MIT OR Apache-2.0"
version = "0.2.0"
repository = "https://github.com/bug-ops/tap-mcp-bridge"

# Dependencies are sorted alphabetically.
# Only versions are specified here; features are in crate-specific Cargo.toml files.
[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
criterion = "0.8"
ed25519-dalek = "2"
hex = "0.4"
josekit = "0.10"
jsonwebtoken = "10"
lru = "0.16"
proptest = "1"
reqwest = { version = "0.12", default-features = false }
rmcp = "0.12"
rust_decimal = "1.40"
secrecy = "0.10"
serde = "1"
serde_json = "1"
sha2 = "0.10"
signature = "2"
tap-mcp-bridge = { version = "0.2.0", path = "tap-mcp-bridge" }
tap-mcp-server = { version = "0.2.0", path = "tap-mcp-server" }
thiserror = "2"
tokio = "1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
uuid = "1.19"
zeroize = "1"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

allow_attributes_without_reason = "warn"
as_underscore = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
mixed_read_write_in_expression = "warn"
module_name_repetitions = "allow"
mutex_atomic = "warn"
needless_raw_strings = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
semicolon_outside_block = "warn"
similar_names = "allow"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unreachable = "warn"
unwrap_used = "warn"
use_debug = "warn"
verbose_file_reads = "warn"

[profile.bench]
debug = 1

[profile.release]
codegen-units = 1
lto = true
strip = true
