[package]
name = "tap-mcp-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A bridge library for TAP-MCP integration"
readme = "../README.md"
keywords = ["tap", "mcp", "bridge", "integration"]
categories = ["development-tools"]
publish = true

[package.metadata.cargo-udeps.ignore]
normal = [
    "rmcp",         # Used for MCP server integration
    "jsonwebtoken", # Used for ID Token (JWT) generation
    "josekit",      # Used for JWE encryption in APC
    "secrecy",      # Used for ACRO/APC sensitive data handling
]

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
josekit.workspace = true
jsonwebtoken.workspace = true
lru.workspace = true
reqwest.workspace = true
rmcp.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
signature.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing-subscriber.workspace = true

[[bench]]
name = "observability_overhead"
harness = false

[features]
default = []

[lints]
workspace = true
