[package]
name = "tap-mcp-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A bridge library for TAP-MCP integration"
readme = "../README.md"
keywords = ["tap", "mcp", "bridge", "integration"]
categories = ["development-tools"]
publish = true

[package.metadata.cargo-udeps.ignore]
normal = [
    "rmcp",         # Used for MCP server integration
    "jsonwebtoken", # Used for ID Token (JWT) generation
    "josekit",      # Used for JWE encryption in APC
    "secrecy",      # Used for ACRO/APC sensitive data handling
]

# Dependencies are sorted alphabetically.
[dependencies]
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
ed25519-dalek.workspace = true
hex.workspace = true
josekit = { workspace = true, features = ["vendored"] }
jsonwebtoken = { workspace = true, features = ["aws_lc_rs"] }
lru.workspace = true
reqwest = { workspace = true, features = ["http2", "json", "rustls-tls"] }
rmcp.workspace = true
rust_decimal = { workspace = true, features = ["serde"] }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
signature.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
toml.workspace = true
tracing.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
zeroize.workspace = true

# Dev dependencies are sorted alphabetically.
[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
proptest.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

[[bench]]
name = "observability_overhead"
harness = false

[features]
default = []

[lints]
workspace = true
