[package]
name = "tap-mcp-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server binary for TAP integration with AI agents"
readme = "../README.md"
keywords = ["tap", "mcp", "server", "mcp-client"]
categories = ["command-line-utilities"]

[dependencies]
# Library crate with all TAP functionality
tap-mcp-bridge = { path = "../tap-mcp-bridge" }

# MCP Protocol (with server and macros features for tool_router)
rmcp = { workspace = true, features = ["server", "macros", "transport-io"] }

# Async Runtime (full features for binary)
tokio = { workspace = true, features = ["signal"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error Handling (anyhow for binaries)
anyhow.workspace = true
thiserror.workspace = true

# Logging (full features for binary)
tracing.workspace = true
tracing-subscriber.workspace = true

# Cryptography (for key parsing)
ed25519-dalek.workspace = true
hex.workspace = true

# URL parsing (for validation)
url.workspace = true

[lints]
workspace = true
