[package]
name = "tap-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server binary for TAP integration with AI agents"
readme = "../README.md"
keywords = ["tap", "mcp", "server", "mcp-client"]
categories = ["command-line-utilities"]
publish = false

# Dependencies are sorted alphabetically.
[dependencies]
anyhow.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
rmcp = { workspace = true, features = ["macros", "server", "transport-io"] }
serde.workspace = true
serde_json.workspace = true
tap-mcp-bridge.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "signal"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url.workspace = true

[lints]
workspace = true
